[package]
name = "rovhost-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = "0.4"
relm4-components = "0.4"
relm4-macros = "0.4"
opencv = "0.62"
fragile = "1.0"
gstreamer = "0.18"
gstreamer-rtsp = "0.18"
gstreamer-app = { version = "0.18" } # , features = ["v1_20"] }
gstreamer-video = "0.18"
glib = "0.15"
glib-macros = "0.15"
strum = "0.23"
strum_macros = "0.23"
dirs = "4.0"
tracker = "0.1"
rand = "0.8"
derivative = "2.0"
sdl2 = "0.35"
sdl2-sys = "0.35"
lazy_static = "1.4"
pangocairo = "0.15"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.10"
md5 = "0.7"

[dependencies.adw]
package = "libadwaita"
version = "0.1"

[dependencies.gtk]
package = "gtk4"
version = "0.4"
features = ["v4_4"]