[package]
name = "rov-host"
version = "1.1.1"
edition = "2021"

[dependencies]
glib = "0.15"
gtk = { package = "gtk4", version = "0.4", features = ["v4_4"] }
gdk = { package = "gdk4", version = "0.4" }
gsk = { package = "gsk4", version = "0.4" }
gdk-pixbuf = "0.15"
glib-macros = "0.15"
gio = "0.15"
pango = "0.15"
adw = { package = "libadwaita", version = "0.1" }
relm4 = "0.4"
relm4-components = "0.4"
relm4-macros = "0.4"
gst = { package = "gstreamer", version = "0.18" }
gst-app = { package = "gstreamer-app", version = "0.18", features = ["v1_20"] }
opencv = { version = "0.62", default-features = false, features = ["imgproc"] }
sdl2 = "0.35"
sdl2-sys = "0.35"
fragile = "1.0"
strum = "0.23"
strum_macros = "0.23"
dirs = "4.0"
tracker = "0.1"
rand = "0.8"
derivative = "2.0"
lazy_static = "1.4"
pangocairo = "0.15"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.10", features = ["tokio1"] }
md5 = "0.7"
url = { version = "2", features = ["serde"] }
jsonrpsee-core = { version = "0.15", default-features = false }
jsonrpsee-http-client = { version = "0.15", default-features = false }